--- a/home.html
+++ b/home.html
@@ -7,28 +7,19 @@
     <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
-    <header>
-        <div class="header-left">
-            <p>Você está logado</p>
-        </div>
-        <div class="header-center">
-            <h1>Elenco de Atletas</h1>
-        </div>
-        <div class="header-right">
-            <button id="logout-button">Logout</button>
-        </div>
-    </header>
-    <main>
-        <div class="filter-buttons">
-            <button class="filter-button" data-endpoint="all">Geral</button>
-            <button class="filter-button" data-endpoint="masculino">Masculino</button>
-            <button class="filter-button" data-endpoint="feminino">Feminino</button>
-        </div>
-        <div class="search-container">
-            <input type="text" id="search-input" placeholder="Buscar atleta">
-        </div>
-        <div id="athletes-container" class="athletes-container"></div>
-    </main>
+    <h1>Bem-vindo à Home Page</h1>
+    <p>Você está logado!</p>
+    <button id="logout-button">Logout</button>
+
+    <h2>Elenco de Atletas</h2>
+    <div>
+        <button class="filter-button" data-endpoint="all">Geral</button>
+        <button class="filter-button" data-endpoint="masculino">Masculino</button>
+        <button class="filter-button" data-endpoint="feminino">Feminino</button>
+    </div>
+    <input type="text" id="search-input" placeholder="Filtrar por nome">
+    <div id="athletes-container"></div>
+
     <script src="js/home.js"></script>
 </body>
 </html>
