--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <div class="login-container">
-        <h2>Login</h2>
+        <h1>Atletas do Botafogo em 2024-1</h1>
+        <p class="subtitle">Criado com objetivos exclusivamente didáticos para a disciplina Desenvolvimento Web do Ibmec Rio.</p>
         <form id="login-form">
             <div class="form-group">
                 <label for="password">Senha</label>
