--- a/detalhes.html
+++ b/detalhes.html
@@ -9,7 +9,9 @@
 <body>
     <h1>Detalhes do Atleta</h1>
     <div id="athlete-details"></div>
-
+    <div class="back-button-container">
+        <button id="back-to-home-button">Voltar para Home</button>
+    </div>
     <script src="js/detalhes.js"></script>
 </body>
 </html>
